--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -11,11 +11,7 @@
         </tr>
     </thead>
     <tbody class="list-body">
-        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
-            <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
-        </tr>
-        <tr class="flex-row align-items-center notice-pinned " th:each="topNotice, i: ${topNoticeList}"
-            th:if="not ${#arrays.isEmpty(noticeList)} and ${i.count} < 4">
+        <tr class="flex-row align-items-center notice-pinned " th:each="topNotice: ${topNoticeList}">
             <td style="width:30%;" class="align-left underline">
                 <a sec:authorize="!hasAuthority('notice.update')" th:text="${topNotice.noticeTitle}"
                    th:href="@{/notices/{id}/view(id=${topNotice.noticeNo})}">
@@ -34,25 +30,27 @@
             <td style="width:20%;" class="align-left date-time" name="noticeDt" th:text="${topNotice.topNoticeStrtDt} + '~' + ${topNotice.topNoticeEndDt}"/>
             <td style="width:15%;" class="align-left date-time" name="createDt" th:text="${topNotice.createDt}"></td>
         </tr>
-
-            <tr class="flex-row align-items-center" th:each="notice : ${noticeList}">
-                <td style="width:30%;" class="align-left underline">
-                    <a sec:authorize="!hasAuthority('notice.update')" th:text="${notice.noticeTitle}"
-                       th:href="@{/notices/{id}/view(id=${notice.noticeNo})}"></a>
-                    <a sec:authorize="hasAuthority('notice.update')" th:text="${notice.noticeTitle}"
-                       th:href="@{/notices/{id}/edit(id=${notice.noticeNo})}"></a>
-                </td>
-                <td style="width:5%;" class="align-center" th:if="${notice.popYn}">
-                    <button type="button" class="z-button-icon form" th:onclick="openPopUp([[${notice.noticeNo}]], [[${notice.popWidth}]], [[${notice.popHeight}]])">
-                        <span class="z-icon i-popup"></span>
-                    </button>
-                </td>
-                <td style="width:5%;" class="align-center" th:unless="${notice.popYn}"></td>
-                <td style="width:10%;" class="align-center" id="userName" th:text="${notice?.createUserName}"></td>
-                <td style="width:20%;" class="align-left date-time" name="popDt" th:text="${notice.popStrtDt} + '~' + ${notice.popEndDt}"></td>
-                <td style="width:20%;" class="align-left date-time" name="noticeDt" th:text="${notice.topNoticeStrtDt} + '~' + ${notice.topNoticeEndDt}"></td>
-                <td style="width:15%;" class="align-left date-time" name="createDt" th:text="${notice.createDt}"></td>
-            </tr>
+        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
+            <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
+        </tr>
+        <tr class="flex-row align-items-center" th:each="notice : ${noticeList}">
+            <td style="width:30%;" class="align-left underline">
+                <a sec:authorize="!hasAuthority('notice.update')" th:text="${notice.noticeTitle}"
+                   th:href="@{/notices/{id}/view(id=${notice.noticeNo})}"></a>
+                <a sec:authorize="hasAuthority('notice.update')" th:text="${notice.noticeTitle}"
+                   th:href="@{/notices/{id}/edit(id=${notice.noticeNo})}"></a>
+            </td>
+            <td style="width:5%;" class="align-center" th:if="${notice.popYn}">
+                <button type="button" class="z-button-icon form" th:onclick="openPopUp([[${notice.noticeNo}]], [[${notice.popWidth}]], [[${notice.popHeight}]])">
+                    <span class="z-icon i-popup"></span>
+                </button>
+            </td>
+            <td style="width:5%;" class="align-center" th:unless="${notice.popYn}"></td>
+            <td style="width:10%;" class="align-center" id="userName" th:text="${notice?.createUserName}"></td>
+            <td style="width:20%;" class="align-left date-time" name="popDt" th:text="${notice.popStrtDt} + '~' + ${notice.popEndDt}"></td>
+            <td style="width:20%;" class="align-left date-time" name="noticeDt" th:text="${notice.topNoticeStrtDt} + '~' + ${notice.topNoticeEndDt}"></td>
+            <td style="width:15%;" class="align-left date-time" name="createDt" th:text="${notice.createDt}"></td>
+        </tr>
     </tbody>
 </table>
 <input th:type="hidden" id="totalCount" name="totalCount" th:value="${paging.totalCount}">
