--- a/src/main/resources/public/scss/document/_variables.scss
+++ b/src/main/resources/public/scss/document/_variables.scss
@@ -24,6 +24,13 @@ $cmdb-ci-attribute-bg-color:                 map-get($grays, 'light');
 $tree-modal-width:                           40rem; // 640px
 $tree-modal-height:                          44.19rem; // 707px
 
+///////////////////////// 커스텀코드 리스트 모달 /////////////////////////
+$custom-code-modal-width:                    40rem; // 640px
+$custom-code-modal-height:                   53.75rem; // 860px
+$custom-code-modal-header-height:            3.125rem; // 50px
+$custom-code-modal-bottom-height:            6.25rem; //100px
+
+
 /////////////////////////// color Set //////////////////////////
 $grays: (
   'icon':                                         #A0A4A6,
