#10923 페이징 MR 응대 - class 표기법 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -7300,27 +7300,27 @@ body.modal-active {
  * @description 페이징 목록 디자인
  * @author Jung Hee Chan
  */
-.z-itsm-container .z-pagingArea {
+.z-itsm-container .z-paging-area {
   background-color: #FAFAFA;
 }
 
-.z-pagingArea {
+.z-paging-area {
   padding: 0 3.75rem 1.875rem 3.75rem;
   justify-content: center;
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   line-height: 1.5rem;
 }
-.z-pagingArea a.z-pagingArrow {
+.z-paging-area a.z-paging-arrow {
   cursor: text;
 }
-.z-pagingArea a.z-pagingArrow.active {
+.z-paging-area a.z-paging-arrow.active {
   cursor: pointer;
 }
-.z-pagingArea a.z-pagingArrow.active span.z-icon {
+.z-paging-area a.z-paging-arrow.active span.z-icon {
   background: #8B9094;
 }
-.z-pagingArea a.z-pagingArrow .z-icon.i-pagingStartArrow {
+.z-paging-area a.z-paging-arrow .z-icon.i-paging-start-arrow {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/icon_paging_arrow_start.svg");
@@ -7331,7 +7331,7 @@ body.modal-active {
   mask-position: center;
   background: #ABB0B5;
 }
-.z-pagingArea a.z-pagingArrow .z-icon.i-pagingPrevArrow {
+.z-paging-area a.z-paging-arrow .z-icon.i-paging-prev-arrow {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/icon_paging_arrow_prev.svg");
@@ -7342,7 +7342,7 @@ body.modal-active {
   mask-position: center;
   background: #ABB0B5;
 }
-.z-pagingArea a.z-pagingArrow .z-icon.i-pagingNextArrow {
+.z-paging-area a.z-paging-arrow .z-icon.i-paging-next-arrow {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/icon_paging_arrow_next.svg");
@@ -7353,7 +7353,7 @@ body.modal-active {
   mask-position: center;
   background: #ABB0B5;
 }
-.z-pagingArea a.z-pagingArrow .z-icon.i-pagingEndArrow {
+.z-paging-area a.z-paging-arrow .z-icon.i-paging-end-arrow {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/icon_paging_arrow_end.svg");
@@ -7364,7 +7364,7 @@ body.modal-active {
   mask-position: center;
   background: #ABB0B5;
 }
-.z-pagingArea .z-pagingNumbers a {
+.z-paging-area .z-paging-numbers a {
   display: inline-block;
   min-width: 1.5rem;
   line-height: 1.375rem;
@@ -7372,14 +7372,14 @@ body.modal-active {
   text-align: center;
   color: #222529;
 }
-.z-pagingArea .z-pagingNumbers a:hover {
+.z-paging-area .z-paging-numbers a:hover {
   color: #222529;
   background-color: #E3F5FC;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
 }
-.z-pagingArea .z-pagingNumbers a.selectedPage {
+.z-paging-area .z-paging-numbers a.selected-page {
   font-weight: 700;
   color: #2578CE;
   border: 1px solid #2578CE;
@@ -7387,7 +7387,7 @@ body.modal-active {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
 }
-.z-pagingArea .z-pagingNumbers a:active {
+.z-paging-area .z-paging-numbers a:active {
   font-weight: 700;
   color: #1959AC;
   background-color: #ADE6FD;
@@ -7395,7 +7395,7 @@ body.modal-active {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
 }
-.z-pagingArea #spanCurrentPageNum {
+.z-paging-area #spanCurrentPageNum {
   font-weight: 700;
   color: #8B9094;
   position: absolute;
