--- a/src/main/resources/public/template/layout/fragments/pagingAreaFragment.html
+++ b/src/main/resources/public/template/layout/fragments/pagingAreaFragment.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org">
-<div class="z-pagingArea flex-row">
-    <a href="" id="pagingStartArrow" class="z-pagingArrow flex-row"><span class="z-icon i-pagingStartArrow"></span></a>
-    <a href="" id="pagingPrevArrow" class="z-pagingArrow flex-row"><span class="z-icon i-pagingPrevArrow"></span></a>
-    <div class="z-pagingNumbers"></div>
-    <a href="" id="pagingNextArrow" class="z-pagingArrow flex-row"><span class="z-icon i-pagingNextArrow"></span></a>
-    <a href="" id="pagingEndArrow" class="z-pagingArrow flex-row"><span class="z-icon i-pagingEndArrow"></span></a>
+<div class="z-paging-area flex-row">
+    <a href="" id="pagingStartArrow" class="z-paging-arrow flex-row"><span class="z-icon i-paging-start-arrow"></span></a>
+    <a href="" id="pagingPrevArrow" class="z-paging-arrow flex-row"><span class="z-icon i-paging-prev-arrow"></span></a>
+    <div class="z-paging-numbers"></div>
+    <a href="" id="pagingNextArrow" class="z-paging-arrow flex-row"><span class="z-icon i-paging-next-arrow"></span></a>
+    <a href="" id="pagingEndArrow" class="z-paging-arrow flex-row"><span class="z-icon i-paging-end-arrow"></span></a>
     <span id="spanCurrentPageNum"></span>
 </div>
 <script type="module">
