--- a/src/main/resources/public/template/layout/navigation.html
+++ b/src/main/resources/public/template/layout/navigation.html
@@ -10,39 +10,39 @@
 * 4) 그룹메뉴는 하위의 메뉴를 열거나 펼칠때만 사용되고 실제 연결은 모두 연결메뉴에서 담당한다.
 * 5) 현재는 2단계의 메뉴 깊이로 고정한다.
 */-->
-<div th:class="${COMMON_PREFIX} + 'navigation'">
-	<div th:class="${COMMON_PREFIX} + 'gnb'">
-		<div th:class="${COMMON_PREFIX} + 'logo'">
-			<img th:class="${COMMON_PREFIX} + 'img i-navigation-logo'" th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_navigation_logo.svg'" width="152" height="26" alt="Zenius ITSM">
+<div class="z-navigation">
+	<div class="z-gnb">
+		<div class="z-logo">
+			<img class="z-img i-navigation-logo" th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_navigation_logo.svg'" width="152" height="26" alt="Zenius ITSM">
 		</div>
-		<div th:class="${COMMON_PREFIX} + 'menu'">
-			<div th:class="${COMMON_PREFIX} + 'menu-area'">
+		<div class="z-menu">
+			<div class="z-menu-area">
 				<ul>
-					<li th:class="${COMMON_PREFIX} + 'gnb-area'" th:each="topMenu : ${#authentication.details.menus}"
+					<li class="z-gnb-area" th:each="topMenu : ${#authentication.details.menus}"
 							th:order-data="${topMenu.sort}" th:if="${topMenu.pMenuId} == 'menu' and ${topMenu.useYn} == true">
 						<!--/* 그룹 메뉴 */-->
-						<a th:if="${#strings.isEmpty(topMenu.url)}" onclick="accordionMenu(this);" th:data-menugroup="${topMenu.menuId}" th:class="${COMMON_PREFIX} + 'gnb-link flex-row'"
+						<a th:if="${#strings.isEmpty(topMenu.url)}" onclick="accordionMenu(this);" th:data-menugroup="${topMenu.menuId}" class="z-gnb-link flex-row"
 						   th:classappend="${topMenu.menuId} == ${session.active_url_parent} ? active-parent">
-							<span th:class="${COMMON_PREFIX} + 'icon i-gnb-' + ${topMenu.menuId}"></span>
-							<span th:class="${COMMON_PREFIX} + 'menu-name'" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
-							<span th:class="${COMMON_PREFIX} + 'icon i-arrow-right'"></span>
+							<span th:class="'z-icon i-gnb-' + ${topMenu.menuId}"></span>
+							<span class="z-menu-name" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
+							<span class="z-icon i-arrow-right"></span>
 						</a>
-						<ul th:if="${#strings.isEmpty(topMenu.url)}" th:id="${topMenu.menuId}" th:class="${COMMON_PREFIX} + 'snb-group'">
-							<li th:id="${subMenu.menuId}" th:class="${COMMON_PREFIX} + 'snb-area'" th:each="subMenu : ${#authentication.details.menus}"
+						<ul th:if="${#strings.isEmpty(topMenu.url)}" th:id="${topMenu.menuId}" class="z-snb-group">
+							<li th:id="${subMenu.menuId}" class="z-snb-area" th:each="subMenu : ${#authentication.details.menus}"
 								th:order-data="${subMenu.sort}" th:if="${subMenu.pMenuId} == ${topMenu.menuId} and ${subMenu.useYn} == true">
-								<a th:href="${subMenu.url}"  th:class="${COMMON_PREFIX} + 'snb-link ' + ${#strings.substringAfter(subMenu.menuId,'.')}" onclick="showProgressBar()"
+								<a th:href="${subMenu.url}"  th:class="'z-snb-link ' + ${#strings.substringAfter(subMenu.menuId,'.')}" onclick="showProgressBar()"
 								   th:classappend="${subMenu.url} == ${session.active_url} ? active">
-									<span th:class="${COMMON_PREFIX} + 'icon i-gnb_sub_dot'"></span>
-									<span th:class="${COMMON_PREFIX} + 'menu-name'" th:text="#{|menu.${subMenu.menuId}|}"></span>
+									<span class="z-icon i-gnb_sub_dot"></span>
+									<span class="z-menu-name" th:text="#{|menu.${subMenu.menuId}|}"></span>
 								</a>
 							</li>
 						</ul>
 						<!--/* 연결 메뉴 */-->
-						<a th:unless="${#strings.isEmpty(topMenu.url)}" th:href="${topMenu.url}" th:class="${COMMON_PREFIX} + 'gnb-link flex-row'"
+						<a th:unless="${#strings.isEmpty(topMenu.url)}" th:href="${topMenu.url}" class="z-gnb-link flex-row"
 						   th:classappend="${topMenu.url} == ${session.active_url} ? active">
-							<span th:class="${COMMON_PREFIX} + 'icon i-gnb-' + ${topMenu.menuId}"></span>
-							<span th:class="${COMMON_PREFIX} + 'menu-name'" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
-							<span th:if="${topMenu.menuId == 'token'}" th:class="${COMMON_PREFIX} + 'token-count align-center'" id="tokenCount">-</span>
+							<span th:class="'z-icon i-gnb-' + ${topMenu.menuId}"></span>
+							<span class="z-menu-name" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
+							<span th:if="${topMenu.menuId == 'token'}" class="z-token-count align-center" id="tokenCount">-</span>
 						</a>
 					</li>
 				</ul>
@@ -77,13 +77,13 @@
 			document.querySelector('.active-parent').dispatchEvent(evt);
 		}
 
-		OverlayScrollbars(document.querySelector('.' + aliceJs.COMMON_PREFIX + 'menu'), {
+		OverlayScrollbars(document.querySelector('.z-menu'), {
 			className: 'inner-scrollbar-dark',
 			callbacks: {
 				onInitialized: function() {
 					const verticalScrollTrack = document.querySelector('.os-scrollbar-vertical').firstChild;
 					const verticalScrollHandle = verticalScrollTrack.firstChild;
-					verticalScrollTrack.classList.add(aliceJs.COMMON_PREFIX + 'right');
+					verticalScrollTrack.classList.add('z-right');
 				}
 			}
 		});
@@ -131,7 +131,7 @@
 					body: createProductModalContent(data),
 					buttons: [{
 						content: i18n.msg('common.btn.close'),
-						classes: aliceJs.COMMON_PREFIX + 'button secondary',
+						classes: 'z-button secondary',
 						bindKey: false,
 						callback: function (modal) {
 							modal.hide();
