--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -102,7 +102,7 @@
                         <td th:unless="${#strings.isEmpty(ciHistory.createUser)}" style="width: 20%;" th:text="#{ciHistory.createUser}"></td>
                         <td style="width: 20%;" class="date-time" th:text="${ciHistory.applyDt}"></td>
                         <td style="width: 10%;" class="align-center" th:text="#{|cmdb.ci.label.status.${ciHistory.ciStatus}|}"></td>
-                        <td th:if="${ciHistory.automatic == true}" style="width: 10%;" class="align-center" th:text="#{common.label.zenius}"></td>
+                        <td th:if="${ciHistory.automatic == true}" style="width: 10%;" class="align-center" th:text="#{common.label.ems}"></td>
                         <td th:unless="${ciHistory.automatic == true}" style="width: 10%;" class="align-center" th:text="#{common.label.itsm}"></td>
                     </tr>
                     </tbody>
