--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -772,6 +772,16 @@ input, button, select, optgroup, textarea {
   -webkit-mask-position: center;
   mask-position: center;
 }
+.z-icon.i-download {
+  width: 1.5rem;
+  height: 1.5rem;
+  -webkit-mask-image: url("../media/icons/icon_download.svg");
+  mask-image: url("../media/icons/icon_download.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+}
 
 /* _layout.scss
  *
@@ -3844,23 +3854,9 @@ table tbody tr:hover {
   text-align: center;
   cursor: pointer;
 }
-.file-uploader-edit .dropzone .dz-preview .dz-download .icon-download {
-  display: inline-block;
-  width: 1.25rem;
+.file-uploader-edit .dropzone .dz-preview .dz-download .z-icon.i-download {
   height: 3rem;
-  -webkit-mask-image: url("../media/icons/icon_download.svg");
-  mask-image: url("../media/icons/icon_download.svg");
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  mask-position: center;
-  -webkit-mask-size: 1.25rem;
-  mask-size: 1.25rem;
-  background: #CCCED1;
-  cursor: pointer;
-}
-.file-uploader-edit .dropzone .dz-preview .dz-download .icon-download:hover {
-  background: #586872;
+  background: #8B9094;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-remove {
   display: block;
@@ -3871,23 +3867,9 @@ table tbody tr:hover {
   text-align: center;
   cursor: pointer;
 }
-.file-uploader-edit .dropzone .dz-preview .dz-remove .icon-delete {
-  display: inline-block;
-  width: 1.125rem;
+.file-uploader-edit .dropzone .dz-preview .dz-remove .z-icon.i-delete {
   height: 3rem;
-  -webkit-mask-image: url("../media/icons/icon_delete.svg");
-  mask-image: url("../media/icons/icon_delete.svg");
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  mask-position: center;
-  -webkit-mask-size: 1.125rem 1.25rem;
-  mask-size: 1.125rem 1.25rem;
-  background: #CCCED1;
-  cursor: pointer;
-}
-.file-uploader-edit .dropzone .dz-preview .dz-remove .icon-delete:hover {
-  background: #586872;
+  background: #8B9094;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-image {
   display: block;
